--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,25 @@
 name: ${PROJECT_NAME}
 services:
-  postgres:
-    image: postgres:17-alpine
-    container_name: ${PROJECT_NAME}-db
-    restart: always
-    volumes:
-      - pf-data:/var/lib/postgresql/data
-      - ./_entrypoint:/docker-entrypoint-initdb.d
-    ports:
-      - "${POSTGRES_PORT}:5432"
-    environment:
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_APP_USER=${POSTGRES_APP_USER}
-      - POSTGRES_APP_PASSWORD=${POSTGRES_APP_PASSWORD}
-    networks:
-      - pf-net
+  # postgres:
+  #   image: postgres:17-alpine
+  #   container_name: ${PROJECT_NAME}-db
+  #   restart: always
+  #   volumes:
+  #     - pf-data:/var/lib/postgresql/data
+  #     - ./_entrypoint:/docker-entrypoint-initdb.d
+  #   ports:
+  #     - "${POSTGRES_PORT}:5432"
+  #   environment:
+  #     - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+  #     - POSTGRES_USER=${POSTGRES_USER}
+  #     - POSTGRES_DB=${POSTGRES_DB}
+  #     - POSTGRES_APP_USER=${POSTGRES_APP_USER}
+  #     - POSTGRES_APP_PASSWORD=${POSTGRES_APP_PASSWORD}
+  #   networks:
+  #     - pf-net
   backend:
-    depends_on:
-      - postgres
+    # depends_on:
+    #   - postgres
     container_name: ${PROJECT_NAME}-backend
     build:
       context: .
@@ -32,9 +32,9 @@ services:
     ports:
       - "3009:3000"
 
-volumes:
-  pf-data:
-    name: ${PROJECT_NAME}-pf-data
+# volumes:
+#   pf-data:
+#     name: ${PROJECT_NAME}-pf-data
 networks:
   pf-net:
     name: ${PROJECT_NAME}-pf-net
